# yumeami

./: $  .clang-format  .gitignore  CMakeLists.txt  CONVENTIONS.md  README.md
.cache/clangd/index/: main.cc.E8D8340D22E920F2.idx  viewport_transform.cc.C975AE0809C7D96E.idx  viewport_transform.hh.E0BECCAB72EDBD0A.idx
res/: config.json
src/: CMakeLists.txt  main.cc  units.hh
src/_sandbox/: CMakeLists.txt  ai_random_move.cc  animation.cc  background.cc  clamp.cc  collision.cc  decl.hh  position.cc  spritesheet.cc  world.cc  world.hh  wrap.cc  zorder.cc
src/ai/: CMakeLists.txt  base.cc  base.hh  death.cc  death.hh  idle.cc  idle.hh  move_random.cc  move_random.hh
src/assetmgr/: CMakeLists.txt  texture.cc  texture.hh
src/assetmgt/: CMakeLists.txt  texture.cc
src/assman/: CMakeLists.txt  texture.cc
src/common/: CMakeLists.txt  defines.hh  direction.hh  grid.hh  raii.cc  raii.hh  sources.cmake  static_string.hh  units.hh  variant_helpers.hh  viewport.hh  viewport_transform.cc  viewport_transform.hh
src/common/grid/: fwd.hh  grid.hh
src/common/raii/: fwd.hh  render_texture.cc  render_texture.hh  texture.cc  texture.hh
src/common/types/: direction.cc  direction.hh  fwd.hh  vector.hh
src/common/units/: fwd.hh  px.hh  tile.hh  tx.hh
src/common/viewport/: fwd.hh  viewport.cc  viewport.hh
src/dbg/: CMakeLists.txt  debug.cc  debug.hh
src/game/: CMakeLists.txt  collision.cc  collision.hh  components.hh  conversions.cc  conversions.hh  debug.cc  debug.hh  draw.cc  draw.hh  filesystem.cc  filesystem.hh  input.cc  input.hh  movement.cc  movement.hh  namespaces.hh  simple_components.hh  texture.cc  texture.hh  world.cc  world.hh
src/game/component/: movement_state.hh  simple.hh  simple_components.hh
src/game/event/: base.hh  input.cc  input.hh  simple_events.hh  simple_queues.hh
src/game/system/: draw.cc  draw.hh  movement.cc  movement.hh  update_movement.cc  update_movement.hh
src/graphics/: CMakeLists.txt  texture.cc  texture.hh
src/input/: CMakeLists.txt  input.cc  input.hh
src/io/: CMakeLists.txt  config_io.cc  config_io.hh  io.cc  io.hh  world_io.cc  world_io.hh
src/logic/: CMakeLists.txt  animation.cc  animation.hh  camera.cc  camera.hh  collision.cc  collision.hh  components.hh  components_op.cc  components_op.hh  death.cc  death.hh  decision.cc  decision.hh  emplace.cc  emplace.hh  event_op.hh  movement.cc  movement.hh  sources.cmake  world.cc  world.hh  zsort.cc  zsort.hh
src/logic/collision/: collision.cc  collision.hh  fwd.hh
src/logic/movement/: fwd.hh  movement.cc  movement.hh
src/logic/utils/: event.cc  event.hh
src/model/: CMakeLists.txt  components.hh  fwd.hh  sources.cmake  viewport.cc  viewport.hh
src/model/camera/: camera.cc  camera.hh  fwd.hh
src/model/components/: common.hh  components.hh  fwd.hh  movement.hh  sprite.cc  sprite.hh
src/model/spritesheet/: fwd.hh  spritesheet.cc  spritesheet.hh
src/model/texture/: spritesheet.cc  spritesheet.hh
src/model/viewport/: fwd.hh  viewport.cc  viewport.hh
src/model/world/: builder.cc  builder.hh  fwd.hh  world.hh
src/render/: CMakeLists.txt  base.cc  base.hh  draw.cc  draw.hh  draw_background.cc  draw_background.hh  draw_debug.cc  draw_debug.hh  draw_sprites.cc  draw_sprites.hh  draw_viewport.cc  draw_viewport.hh  draw_world.cc  draw_world.hh  sources.cmake  viewport.cc  viewport.hh
src/render/core/: color.hh  raylib_tx.cc  raylib_tx.hh  tiled.cc  tiled.hh
src/render/tile_entity/: draw.cc  draw.hh
src/render/viewport/: draw.cc  draw.hh
src/renderer/: CMakeLists.txt  draw.cc  draw.hh
src/resman/: CMakeLists.txt  base.hh  spritesheet.cc  spritesheet.hh  texture.cc  texture.hh
src/resources/: CMakeLists.txt  all.hh  fwd.hh  id_counter.cc  id_counter.hh  render_texture.cc  render_texture.hh  render_texture_cache.cc  render_texture_cache.hh  resources.hh  sources.cmake  texture_cache.cc  texture_cache.hh
src/resources/core/: id.cc  id.hh
src/resources/render_texture/: cache.cc  fwd.hh
src/resources/spritesheet/: cache.cc  cache.hh  fwd.hh
src/resources/texture/: cache.cc  fwd.hh
src/test/: CMakeLists.txt  test_worlds.cc  test_worlds.hh
src/util/: CMakeLists.txt  direction.hh  display_manager.cc  display_manager.hh  simple_functions.cc  simple_functions.hh  simple_types.hh  units.hh  viewport_transform.cc  viewport_transform.hh
src/utils/: display_manager.cc  display_manager.hh  namespaces.hh
